kubes/frontend/deployment.yml
# Kubernetes API version
apiVersion: apps/v1
# Deployment object
kind: Deployment
metadata:
  # The name of the Deployment
  name: frontend
  labels:
    app: welhome
    micro-service: frontend
  namespace: ns-welhome
spec:
  # Replicas for this Deployment
  replicas: 1
  selector:
    # labels the pods
    matchLabels:
      app: welhome
      micro-service: frontend 
  template:
    metadata:
      labels:
        # The label the pods created from the pod template should have
        app: welhome
        micro-service: frontend 
    spec:
      containers:
        # The container name to execute pods
        - name: frontend 
          image: afkbeto/welhome-frontend:1.0.0
          ports:
            # Assign ports to expose container
            - containerPort: 80 
          volumeMounts:
            - name: frontend-config
              mountPath: usr/share/nginx/html/assets/js/config.js
              subPath: config.js
              readOnly: true

      volumes:
        - name: frontend-config 
          configMap:
            name: frontend-config 
            items:
              - key: env_front 
                path: config.js
